# mocness_opensource

./: ENVIRONMENT_COMPATIBILITY.md  PROJECT_SUMMARY.md  README.md  README_MAMBA.md  all_tows_extracted.json  config.py  create_samples.py  enhanced_extraction.py  enhanced_extraction_tow_1_form.json  enhanced_extraction_tow_1_notes.json  environment.yml  environment_minimal.yml  hpc_troubleshoot.sh  hpc_troubleshoot_comprehensive.sh  hybrid_extraction_focused.py  hybrid_extraction_result.json  justone_vscode.json  main.py  pyproject.toml  setup_check.py  setup_check_mamba.py  setup_hpc.sh  utils.py
input/: README.md
output/: all_extractions.csv  all_tows_extracted.json  extraction_summary.json  tow_1_complete.json
